# camera_lidar_calibration_test_ws

./: .gitignore  CMakeLists.txt  README.md
include/: CalibrationTest.h
src/: CMakeLists.txt  CalibrationTest.cpp  package.xml
src/include/: CalibrationTest.h  PointCloudTypes.h
src/src/: CalibrationTest.cpp  main.cpp
src/transformation_manager/: transformations_camera.launch
transformation_manager/: transformations_camera.launch
