<?xml version="1.0"?>
<package format="2">
  <name>calibration_test</name>
  <version>1.12.0</version>
  <description>
    Camera Lidar Calibration Test Tool
  </description>
  <maintainer email="goktug@leodrive.com">amc</maintainer>
  <license>Apache</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>



</package>
